--- a/public/static/scss/molecules/_banner-logo.scss
+++ b/public/static/scss/molecules/_banner-logo.scss
@@ -47,7 +47,7 @@
         padding-left: 14%;
     }
 
-    @include breakpoint($breakpoint__medium){
+    @include breakpoint($breakpoint__desktop){
         width: 64%;
         padding-left: 0;
     }
