--- a/public/static/scss/quarks/_headings.scss
+++ b/public/static/scss/quarks/_headings.scss
@@ -80,3 +80,11 @@ h5, .epsilon {
     @include rems(font-size, $base-font-size);
     color: $base-color;
 }
+
+.h--alt {
+    @include rems(font-size, 18);
+}
+
+.text--small {
+    @include rems(font-size, 15);
+}
